Fixed bug #50261 (Crash When Calling Parent Constructor with call_user_func())